Release 2.1-dev
===============

Known problems
--------------

- Numpy arrays with unicode elements seem to be now causing a
  segfault

New Features
------------

:mod:`rpy2.robjects`:

- Method :meth:`formals` for :class:`RFunction`

- Methods :meth:`slotnames`, :meth:`isclass`, and :meth:`validobject`
  for :class:`RS4`

- Vector-like objects now in a module :mod:`rpy2.robjects.vectors`


:mod:`rpy2.rinterface`:

- New functions for specifying callback functions for R's front-ends:
  :func:`setShowMessage`, :func:`setFlushConsole`,
  :func:`setChooseFile`, :func:`setShowFiles`

- New object :data:`R_MissingArg`, exposing R's special object for representing
  a "missing" parameter in a function call.
  (#this was first a patch by Nathaniel Smith with a function getMissingArgSexp)

- Initial commit of a callback-based implementation of an R graphical device
  (this is for the moment very experimental - and not fully working)

- :meth:`SexpClosure.rcall` is now taking 2 parameters, 
  a tuple with the parameters and
  an :class:`SexpEnvironment` in which the call is to be evaluated.

- :attr:`Sexp.__sexp__` now has a setter method. This permits the rebinding
  of the underlying R SEXP, and allows to expose `foo<-` type of R methods
  as Python function/methods with side effects.

- Objects of R type RAWSXP are now exposed as instances of class
  :class:`SexpVector`.

- Factory function :func:`unserialize` to build Sexp* instances from byte
  string serialized with R's own 'serialize'.

- Method :meth:`Sexp.__reduce__` for pickling/unpickling

- Ability to specify a callback function for R_CleanUp (called upon exiting R)
  [very experimental]

- Class :class:`ListSexpVector` for creating R lists easily
  (complementing :class:`IntSexpVector`, :class:`StrSexpVector`, and friends) 

- Crash when trying to create a SexpVector of a non-vector type


Changes
-------

- The setup.py script is now taking command-line arguments when specifying