@@ -1,5 +1,6 @@
 from rpy2.robjects.robject import RObjectMixin
 import rpy2.rinterface as rinterface
+import conversion
 
 getmethod = rinterface.baseenv.get("getMethod")
 
@@ -21,6 +22,30 @@ class RS4(RObjectMixin, rinterface.SexpS4):
 
     def validobject(self, test = False, complete = False):
         return methods_env['validObject'](test = False, complete = False)
+
+
+def set_accessors(cls, cls_name, where, acs):
+    # set accessors (to be moved to metaclass ?)
+
+    if where is None:
+        where = rinterface.globalenv
+    else:
+        where = "package:" + str(where)
+        where = rinterface.StrSexpVector((where, ))
+
+    for r_name, python_name, as_property, docstring in acs:
+        if python_name is None:
+            python_name = r_name
+        r_meth = getmethod(rinterface.StrSexpVector((r_name, )), 
+                           signature = rinterface.StrSexpVector((cls_name, )),
+                           where = where)
+        r_meth = conversion.ri2py(r_meth)
+        if as_property:
+            setattr(cls, python_name, property(r_meth, None, None, docstring))
+        else:
+            setattr(cls, python_name, lambda self: r_meth(self))
+
+
 
 
 
